# advent-of-code-2022

./: pyproject.toml
day02/: solver.py
day03/: solver.py
day05/: solver.py
day08/: solver.py
day09/: solver.py
day1/: solver.py
day10/: solver.py
day11/: solver.py
day12/: solver.py
day13/: solver.py
day4/: solver.py
day6/: solver.py
day7/: solver.py
