[tool.poetry]
name = "advent-of-code-2022"
version = "0.1.0"
description = ""
authors = ["jbiddle <jbiddle96@gmail.com>"]
packages = [{include = "advent_of_code_2022"}]

[tool.poetry.dependencies]
python = "^3.9"
ttp = "^0.9.5"
numpy = "^1.25.0"
networkx = "^3.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.23.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
